syntax = "proto3";

package proto;

option go_package = "./";

message RegisterReq {
  string name = 1;
  int64 age =2;
  string address =3;
}

message RegisterResp {
  string greet = 1;
}
message LoginReq {
  string name = 1;
  int64 age =2;
}

message LoginResp {
  int64 userId = 1;
}
service User {
  rpc Register(RegisterReq) returns (RegisterResp);
  rpc Login(LoginReq) returns (LoginResp);
}